<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <item
        android:id="@+id/nextEmptyPlot"
        android:icon="@drawable/ic_action_forward"
        android:showAsAction="always"
        android:title="@string/nextmissingbutton" />
    <item
        android:id="@+id/jumpToPlot"
        android:icon="@drawable/ic_action_barcode"
        android:showAsAction="always"
        android:title="@string/jumptoplotidbutton" />
    <item
        android:id="@+id/barcodeScan"
        android:icon="@drawable/ic_action_barcode_scanner"
        android:showAsAction="always"
        android:title="@string/barcodescan" />
    <item
        android:id="@+id/datagrid"
        android:icon="@drawable/ic_action_grid"
        android:showAsAction="always"
        android:title="@string/jumptoplotidbutton" />
    <item
        android:id="@+id/help"
        android:icon="@drawable/ic_action_help"
        android:showAsAction="always"
        android:title="@string/help" />
    <item
        android:id="@+id/search"
        android:icon="@drawable/ic_action_search"
        android:showAsAction="always"
        android:title="@string/search" />"
    <item
        android:id="@+id/resources"
        android:icon="@drawable/ic_action_collection"
        android:showAsAction="always"
        android:title="@string/resources" />"
    <item
        android:id="@+id/summary"
        android:icon="@drawable/ic_action_icon_summary"
        android:showAsAction="always"
        android:title="@string/mapsummary" />"
    <item
        android:id="@+id/settings"
        android:icon="@drawable/ic_action_settings"
        android:showAsAction="always"
        android:title="@string/settings" />"
</menu>

