<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="wrap_content"
    android:background="#FFFFFF"
    android:orientation="vertical"
    android:padding="5dp" >

    <TextView
        android:id="@+id/currentLocation"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:paddingBottom="10dp"
        android:paddingLeft="10dp"
        android:text=""
        android:textSize="20dp"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/latitude"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="10dip"
        android:layout_marginRight="5dip"
        android:text="@string/latitude"
        android:textSize="20dip" >
    </TextView>

    <TextView
        android:id="@+id/longitude"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="10dip"
        android:layout_marginRight="5dip"
        android:text="@string/longitude"
        android:textSize="20dip" >
    </TextView>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:orientation="horizontal"
        android:weightSum="100" >

        <Button
            android:id="@+id/getLctnBtn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginRight="5dp"
            android:layout_weight="80"
            android:minWidth="180dp"
            android:text="@string/getlocation"
            android:textColor="#000000"
            android:textSize="30dp"
            android:textStyle="bold" />

        <Button
            android:id="@+id/saveBtn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="5dp"
            android:layout_weight="80"
            android:minWidth="100dp"
            android:text="@string/okay"
            android:textColor="#000000"
            android:textSize="30dp"
            android:textStyle="bold" />
    </LinearLayout>

</LinearLayout>